--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0046)file:///Users/jacobhaslam/Documents/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+   
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+   <title>Prework Study Guide</title>
   </head>
+  
+  
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
