--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css"/>
    <title>Prework Study Guide</title>
   </head>
   
@@ -43,7 +43,8 @@
       <section class="card" id="javascript-section">
         <h2> JavaScript</h2>
         <ul>
-          <li> Enter notes about javascript here.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
